<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ArcProjectActivity!</string>
    <string name="app_name">ArcProject</string>

    <!-- *************任务建立页面的string******************** -->
    <string name="nameOfRoad">路段名</string>
    <string name="bt_zhiding">制定</string>
    <string name="bt_qingkong">清空</string>
    <string name="renwuleibir">任务类别</string>
    <string name="sp_xuanze">请选择</string>
    <string name="bt_xuanzequyu">选择区域</string>
    <string name="bt_xunjianquyu">巡检区域</string>
    <string name="xunjianrenyuan">巡检人员</string>
    <string name="renwuneirong">任务内容</string>
    <string name="kaishishijian">开始时间</string>
    <string name="kaishiriqi">0000-00-00</string>
    <string name="jiezhishijian">截止时间</string>
    <string name="jiezhiriqi">0000-00-00</string>
    <string name="xunjianzhouqi">巡检周期</string>
    <string name="tian">（小时）</string>
    <string name="check_zidongshengcheng">按巡检周期自动生成</string>
    <string name="gerenwu">个任务</string>
    <string name="check_zidongfabu">自动发布巡检任务</string>
    <string name="beizhu">备注</string>
    <string name="zhidingren">制定人:</string>
    <string name="zhidingshijian">制定时间:</string>
    <string name="bt_baocunrenwu">保存任务</string>
    <string name="bt_faburenwu">发布任务</string>
    <!-- ************************************************* -->


    <!-- *************日期选择页面的string******************** -->
    <string name="bt_shezhi">设置</string>
    <string name="bt_quxiao">取消</string>
    <!-- ************************************************* -->


    <!-- 任务类别的数组 -->
    <string-array name="str_array_renwuleibie">
        <item>设施监护</item>
        <item>设施巡检</item>
    </string-array>
    <!-- ************************************************* -->


    <!-- 时间的数组 -->
    <string-array name="str_array_time">
        <item>00时</item>
        <item>01时</item>
        <item>02时</item>
        <item>03时</item>
        <item>04时</item>
        <item>05时</item>
        <item>06时</item>
        <item>07时</item>
        <item>08时</item>
        <item>09时</item>
        <item>10时</item>
        <item>11时</item>
        <item>12时</item>
        <item>13时</item>
        <item>14时</item>
        <item>15时</item>
        <item>16时</item>
        <item>17时</item>
        <item>18时</item>
        <item>19时</item>
        <item>20时</item>
        <item>21时</item>
        <item>22时</item>
        <item>23时</item>
    </string-array>
    <!-- ************************************************* -->

    <string name="addUser_username">用户名</string>
    <string name="addUser_password1">密码</string>
    <string name="addUser_password2">再次输入密码 </string>
    <string name="addUser_telphone">手机号码</string>
    <string name="addUser_comment">备注</string>
    <string name="addUser_add">添加</string>
    <string name="addUser_cancel">取消</string>
    <string name="addUser_list">查看列表</string>
    <string name="updateUser">保存修改</string>
    <string name="updateUser_back">返回</string>
    <string name="updateUser_password1">新密码</string>
    <string name="updateUser_password2">再次输入新密码</string>
    <string name="clear">清空</string>
    <!-- ***************************************************bug -->
     <string name="bug_id">问题编号 :</string>
     <string name="bug_address">问题地址 :</string>
     <string name="bug_attachment">附件 :</string>
     <string name="bug_tag">问题说明 :</string>
     <string name="bug_content">问题内容 :</string>
     <string name="bug_state">解决状态 :</string>
     <string name="bug_point">问题坐标 :</string>
     <string name="bug_bugTypeId">故障类型 :</string>
     <string name="bug_userId">上报人员 :</string>
     
<string name="pull_to_refresh_pull_label">继续下拉刷新…</string>
    <string name="pull_to_refresh_release_label">松开刷新…</string>
    <string name="pull_to_refresh_refreshing_label">载入中…</string>
    <string name="pull_to_refresh_tap_label">按下刷新…</string>
    
    <string name="widget_string"></string>
    <string name="note_title">请输入便签内容:</string>
            <string name="edithint">在这里输入内容</string>
     <string name="labelCity"><b><i>请输入您要查看的城市名称:</i></b></string>
	<string name="btnSave">保存</string>
	<string name="titleConfigure">配置</string>
	<string name="titleDetail">四天天气</string>
	<string name="lableUpdateTime"><b><i>设置应用更新时间：</i></b></string>
	<string name="empty">数据为空</string>
	<string name="dateFormat">yyyy年MM月dd日</string>
	<string name="monday">星期一</string>
	<string name="tuesday">星期二</string>
	<string name="wednesday">星期三</string>
	<string name="thursday">星期四</string>
	<string name="friday">星期五</string>
	<string name="saturday">星期六</string>
	<string name="sunday">星期日</string>
</resources>