<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
<!-- 此xml用于定义TaskInputActivity的布局 -->
    <!-- scrollview用于满屏滑动 -->

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <!-- 路段名textview -->

                <TextView
                    android:id="@+id/t_nameOfRoad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.43"
                    android:text="@string/nameOfRoad" />

                <EditText
                    android:id="@+id/t_text_nameOfRoad"
                    android:layout_width="158dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:ems="10" >

                    <requestFocus />
                </EditText>

                <Button
                    android:id="@+id/t_button_zhiding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_zhiding" />

                <Button
                    android:id="@+id/t_button_qingkong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_qingkong" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/t_renwuleibie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/renwuleibir" />

                <Spinner
                    android:id="@+id/t_spinner_selectTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50" />

                <Button
                    android:id="@+id/t_button_xuanzequyu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_xuanzequyu" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/t_xunjianrenyuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xunjianrenyuan" />

                <Spinner
                    android:id="@+id/t_spinner_xunjianrenyuan"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/t_button_xunjianquyu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_xunjianquyu" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/t_renwuneirong"
                    android:layout_width="52dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.17"
                    android:text="@string/renwuneirong"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/t_text_renwuneirong"
                    android:layout_width="wrap_content"
                    android:layout_height="114dp"
                    android:layout_weight="1.07"
                    android:ems="10" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/t_Qx_kaishi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="0.16"
                    android:text="@string/kaishishijian" />

                <Button
                    android:id="@+id/t_bt_kaishiriqi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" >
                </Button>

                <Spinner
                    android:id="@+id/t_spinner_kaishishijian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_weight="0.44" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/t_Qx_jiezhi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="0.41"
                    android:text="@string/jiezhishijian" />

                <Button
                    android:id="@+id/t_bt_jieshuriqi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" >
                </Button>

                <Spinner
                    android:id="@+id/t_spinner_jiezhishijian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_weight="1" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/t_xunjianzhouqi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xunjianzhouqi" />

                <EditText
                    android:id="@+id/t_text_xunjianzhouqi"
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:ems="10" 
                    android:inputType="number"/>

                <TextView
                    android:id="@+id/t_tian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tian" />

                <CheckBox
                    android:id="@+id/t_checkBox_zidongfabu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_zidongfabu"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/t_checkBox_zidongshengcheng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_zidongshengcheng" />

                <EditText
                    android:id="@+id/t_text_gerenwu"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:ems="10" />

                <TextView
                    android:id="@+id/t_gerenwu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gerenwu"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/t_beizhu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beizhu"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/t_text_beizhu"
                    android:layout_width="wrap_content"
                    android:layout_height="114dp"
                    android:layout_weight="1.07"
                    android:ems="10"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/t_zhidingren"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/t_zhidingshijian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/t_button_baocunrenwu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_baocunrenwu" />

                <Button
                    android:id="@+id/t_button_faburenwu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_faburenwu" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>